Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -304,43 +304,43 @@
             <a href="https://cm.cordientrega.com" target="_blank">Kiribati</a>
             <a href="https://cm.cordientrega.com" target="_blank">Nort Korea</a>
             <a href="https://cm.cordientrega.com" target="_blank">South Korea</a>
-            <a href="https://en.wikipedia.org/wiki/Micronesia" target="_blank">Kosovo</a>
-            <a href="https://en.wikipedia.org/wiki/Moldova" target="_blank">Kuwait</a>
-            <a href="https://en.wikipedia.org/wiki/Monaco" target="_blank">Kyrgyzstan</a>
-            <a href="https://en.wikipedia.org/wiki/Mongolia" target="_blank">Laos</a>
-            <a href="https://en.wikipedia.org/wiki/Montenegro" target="_blank">Latvia</a>
-            <a href="https://en.wikipedia.org/wiki/Morocco" target="_blank">Lebanon</a>
-            <a href="https://en.wikipedia.org/wiki/Mozambique" target="_blank">Lesotho</a>
-            <a href="https://en.wikipedia.org/wiki/Myanmar" target="_blank">Liberia</a>
-            <a href="https://en.wikipedia.org/wiki/Namibia" target="_blank">Libya</a>
-            <a href="https://en.wikipedia.org/wiki/Nauru" target="_blank">Liechtenstein</a>
-            <a href="https://en.wikipedia.org/wiki/Nepal" target="_blank">Lithuania</a>
-            <a href="https://en.wikipedia.org/wiki/Netherlands" target="_blank">Luxembourg</a>
-            <a href="https://en.wikipedia.org/wiki/New_Zealand" target="_blank">Madagascar</a>
-            <a href="https://en.wikipedia.org/wiki/Nicaragua" target="_blank">Malawi</a>
-            <a href="https://en.wikipedia.org/wiki/Niger" target="_blank">Malaysia</a>
-            <a href="https://en.wikipedia.org/wiki/Nigeria" target="_blank">Maldives</a>
-            <a href="https://en.wikipedia.org/wiki/North_Macedonia" target="_blank">Mali</a>
-            <a href="https://en.wikipedia.org/wiki/Norway" target="_blank">Malta</a>
-            <a href="https://en.wikipedia.org/wiki/Oman" target="_blank">Marshall Islands</a>
-            <a href="https://en.wikipedia.org/wiki/Pakistan" target="_blank">Mauritania</a>
-            <a href="https://en.wikipedia.org/wiki/Palau" target="_blank">Mauritius</a>
-            <a href="https://en.wikipedia.org/wiki/Palestine" target="_blank">Mexico</a>
-            <a href="https://en.wikipedia.org/wiki/Panama" target="_blank">Micronesia</a>
-            <a href="https://en.wikipedia.org/wiki/Papua_New_Guinea" target="_blank">Moldova</a>
-            <a href="https://en.wikipedia.org/wiki/Paraguay" target="_blank">Monaco</a>
-            <a href="https://en.wikipedia.org/wiki/Peru" target="_blank">Mongolia</a>
-            <a href="https://en.wikipedia.org/wiki/Philippines" target="_blank">Montenegro</a>
-            <a href="https://en.wikipedia.org/wiki/Poland" target="_blank">Morocco</a>
-            <a href="https://en.wikipedia.org/wiki/Portugal" target="_blank">Mozambique</a>
-            <a href="https://en.wikipedia.org/wiki/Qatar" target="_blank">Myanmar</a>
-            <a href="https://en.wikipedia.org/wiki/Romania" target="_blank">Namibia</a>
-            <a href="https://en.wikipedia.org/wiki/Russia" target="_blank">Nauru</a>
-            <a href="https://en.wikipedia.org/wiki/Rwanda" target="_blank">Nepal</a>
-            <a href="https://en.wikipedia.org/wiki/Saint_Kitts_and_Nevis" target="_blank">Netherlands</a>
-            <a href="https://en.wikipedia.org/wiki/Saint_Lucia" target="_blank">New Zealand</a>
-            <a href="https://en.wikipedia.org/wiki/Saint_Vincent_and_the_Grenadines" target="_blank">Nicaragua</a>
-            <a href="https://en.wikipedia.org/wiki/Samoa" target="_blank">Niger</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Kosovo</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Kuwait</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Kyrgyzstan</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Laos</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Latvia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Lebanon</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Lesotho</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Liberia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Libya</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Liechtenstein</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Lithuania</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Luxembourg</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Madagascar</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Malawi</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Malaysia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Maldives</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Mali</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Malta</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Marshall Islands</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Mauritania</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Mauritius</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Mexico</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Micronesia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Moldova</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Monaco</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Mongolia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Montenegro</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Morocco</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Mozambique</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Myanmar</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Namibia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Nauru</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Nepal</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Netherlands</a>
+            <a href="https://cm.cordientrega.com" target="_blank">New Zealand</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Nicaragua</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Niger</a>
             <a href="https://en.wikipedia.org/wiki/San_Marino" target="_blank">Nigeria</a>
             <a href="https://cm.cordientrega.com" target="_blank">North Macedonia</a>
             <a href="https://cm.cordientrega.com" target="_blank">Norway</a>
