--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <a href="https://cm.cordientrega.com" target="_blank">Chad</a>
             <a href="https://cl.cordientrega.com" target="_blank">Chile</a>
             <a href="https://cn.cordientrega.com" target="_blank">China</a>
-            <a href="https://co.cordientrega.com" target="_blank">Colombia</a>
+            <a href="https://co.contraentregaco.com" target="_blank">Colombia</a>
             <a href="https://cm.cordientrega.com" target="_blank">Comoros</a>
             <a href="https://cm.cordientrega.com" target="_blank">Congo</a>
             <a href="https://cr.cordientrega.com" target="_blank">Costa Rica</a>
