--- a/index.html
+++ b/index.html
@@ -215,42 +215,42 @@
 
         <!-- Enlaces -->
         <div class="buttons">
-            <a href="https://af.cordientrega.com" target="_blank">Afghanistan</a>
-            <a href="https://al.cordientrega.com" target="_blank">Albania</a>
-            <a href="https://dz.cordientrega.com" target="_blank">Algeria</a>
-            <a href="https://ad.cordientrega.com" target="_blank">Andorra</a>
-            <a href="https://ao.cordientrega.com" target="_blank">Angola</a>
-            <a href="https://ag.cordientrega.com" target="_blank">Antigua and Barbuda</a>
-            <a href="https://ar.cordientrega.com" target="_blank">Argentina</a>
-            <a href="https://am.cordientrega.com" target="_blank">Armenia</a>
-            <a href="https://au.cordientrega.com" target="_blank">Australia</a>
-            <a href="https://at.cordientrega.com" target="_blank">Austria</a>
-            <a href="https://az.cordientrega.com" target="_blank">Azerbaijan</a>
-            <a href="https://bs.cordientrega.com" target="_blank">Bahamas</a>
-            <a href="https://bh.cordientrega.com" target="_blank">Bahrain</a>
-            <a href="https://bd.cordientrega.com" target="_blank">Bangladesh</a>
-            <a href="https://bb.cordientrega.com" target="_blank">Barbados</a>
-            <a href="https://by.cordientrega.com" target="_blank">Belarus</a>
-            <a href="https://be.cordientrega.com" target="_blank">Belgium</a>
-            <a href="https://bz.cordientrega.com" target="_blank">Belize</a>
-            <a href="https://bj.cordientrega.com" target="_blank">Benin</a>
-            <a href="https://bt.cordientrega.com" target="_blank">Bhutan</a>
-            <a href="https://bo.cordientrega.com" target="_blank">Bolivia</a>
-            <a href="https://ba.cordientrega.com" target="_blank">Bosnia and Herzegovina</a>
-            <a href="https://bw.cordientrega.com" target="_blank">Botswana</a>
-            <a href="https://br.cordientrega.com" target="_blank">Brazil</a>
-            <a href="https://bn.cordientrega.com" target="_blank">Brunei</a>
-            <a href="https://bg.cordientrega.com" target="_blank">Bulgaria</a>
-            <a href="https://bf.cordientrega.com" target="_blank">Burkina Faso</a>
-            <a href="https://bi.cordientrega.com" target="_blank">Burundi</a>
-            <a href="https://cv.cordientrega.com" target="_blank">Cabo Verde</a>
-            <a href="https://kh.cordientrega.com" target="_blank">Cambodia</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Cameroon</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Canada</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Central African Republic</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Chad</a>
-            <a href="https://cl.cordientrega.com" target="_blank">Chile</a>
-            <a href="https://cn.cordientrega.com" target="_blank">China</a>
+            <a href="https://af.contraentregaco.com" target="_blank">Afghanistan</a>
+            <a href="https://al.contraentregaco.com" target="_blank">Albania</a>
+            <a href="https://dz.contraentregaco.com" target="_blank">Algeria</a>
+            <a href="https://ad.contraentregaco.com" target="_blank">Andorra</a>
+            <a href="https://ao.contraentregaco.com" target="_blank">Angola</a>
+            <a href="https://ag.contraentregaco.com" target="_blank">Antigua and Barbuda</a>
+            <a href="https://ar.contraentregaco.com" target="_blank">Argentina</a>
+            <a href="https://am.contraentregaco.com" target="_blank">Armenia</a>
+            <a href="https://au.contraentregaco.com" target="_blank">Australia</a>
+            <a href="https://at.cordientregaco.com" target="_blank">Austria</a>
+            <a href="https://az.cordientregaco.com" target="_blank">Azerbaijan</a>
+            <a href="https://bs.cordientregaco.com" target="_blank">Bahamas</a>
+            <a href="https://bh.cordientregaco.com" target="_blank">Bahrain</a>
+            <a href="https://bd.cordientregaco.com" target="_blank">Bangladesh</a>
+            <a href="https://bb.cordientregaco.com" target="_blank">Barbados</a>
+            <a href="https://by.cordientregaco.com" target="_blank">Belarus</a>
+            <a href="https://be.cordientregaco.com" target="_blank">Belgium</a>
+            <a href="https://bz.cordientregaco.com" target="_blank">Belize</a>
+            <a href="https://bj.cordientregaco.com" target="_blank">Benin</a>
+            <a href="https://bt.cordientregaco.com" target="_blank">Bhutan</a>
+            <a href="https://bo.cordientregaco.com" target="_blank">Bolivia</a>
+            <a href="https://ba.cordientregaco.com" target="_blank">Bosnia and Herzegovina</a>
+            <a href="https://bw.cordientregaco.com" target="_blank">Botswana</a>
+            <a href="https://br.cordientregaco.com" target="_blank">Brazil</a>
+            <a href="https://bn.cordientregaco.com" target="_blank">Brunei</a>
+            <a href="https://bg.cordientregaco.com" target="_blank">Bulgaria</a>
+            <a href="https://bf.cordientregaco.com" target="_blank">Burkina Faso</a>
+            <a href="https://bi.cordientregaco.com" target="_blank">Burundi</a>
+            <a href="https://cv.cordientregaco.com" target="_blank">Cabo Verde</a>
+            <a href="https://kh.cordientregaco.com" target="_blank">Cambodia</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Cameroon</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Canada</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Central African Republic</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Chad</a>
+            <a href="https://cl.cordientregaco.com" target="_blank">Chile</a>
+            <a href="https://cn.cordientregaco.com" target="_blank">China</a>
             <a href="https://co.contraentregaco.com" target="_blank">Colombia</a>
             <a href="https://cm.contraentregaco.com" target="_blank">Comoros</a>
             <a href="https://cm.contraentregaco.com" target="_blank">Congo</a>
@@ -265,18 +265,18 @@
             <a href="https://cm.contraentregaco.com" target="_blank">Dominican Republic</a>
             <a href="https://cm.contraentregaco.com" target="_blank">Ecuador</a>
             <a href="https://cm.contraentregaco.com" target="_blank">Egypt</a>
-            <a href="https://cm.cordientrega.com" target="_blank">El Salvador</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Equatorial Guinea</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Eritrea</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Estonia</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Eswatini</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Ethiopia</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">El Salvador</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Equatorial Guinea</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Eritrea</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Estonia</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Eswatini</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Ethiopia</a>
             <a href="https://cm.cordientrega.com"_blank">Fiji</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Finland</a>
-            <a href="https://cm.cordientrega.com" target="_blank">France</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Gabon</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Gambia</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Georgia</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Finland</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">France</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Gabon</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Gambia</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Georgia</a>
             <a href="https://cm.cordientrega.com" target="_blank">Germany</a>
             <a href="https://cm.cordientrega.com" target="_blank">Ghana</a>
             <a href="https://cm.cordientrega.com" target="_blank">Greece</a>
@@ -406,8 +406,8 @@
             <a href="https://cm.cordientrega.com" target="_blank">Venezuela</a>
             <a href="https://cm.cordientrega.com" target="_blank">Vietnam</a>
             <a href="https://cm.cordientrega.com" target="_blank">Yemen</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Zambia</a>
-            <a href="https://cm.cordientrega.com" target="_blank">Zimbabwe</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Zambia</a>
+            <a href="https://cm.cordientregaco.com" target="_blank">Zimbabwe</a>
         </div>
 
             <!-- Footer -->
